add cursor rules for java files and apply them